# cst-parse-example

./: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
benches/: parse.rs
src/: lib.rs
src/engine/: mod.rs
src/engine/gc/: handle.rs  heuristics.rs  mod.rs  trace.rs
src/engine/value/: closure.rs  mod.rs  table.rs
src/ir/: ty.rs
src/parser/: assign.rs  control.rs  expr.rs  function.rs  item.rs  mod.rs  simple_expr.rs  stmt.rs  syntax.rs  table.rs
src/parser/machinery/: binding_power.rs  classifiers.rs  event.rs  kind.rs  marker.rs  mod.rs  sink.rs  span.rs  state.rs
src/parser/snapshots/: zaia__parser__tests__parse_and_verify_comment.snap  zaia__parser__tests__parse_and_verify_declare.snap  zaia__parser__tests__parse_and_verify_function.snap  zaia__parser__tests__parse_and_verify_if.snap  zaia__parser__tests__parse_and_verify_literal.snap  zaia__parser__tests__parse_and_verify_mixed.snap  zaia__parser__tests__parse_and_verify_op_prec.snap
test-files/: function.lua  if.lua  op_prec.lua
