[package]
name = "zaia"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.12.0"
cstree = "0.10.0"
ariadne = { git = "https://github.com/zesterer/ariadne", rev = "689782a3531c3d4a3e53af998b059c733729c42e" }
hashbrown = { version = "0.12.0", features = ["nightly"] }
fxhash = "0.2.1"

[dev-dependencies]
insta = "1.12.0"
paste = "1.0.6"
criterion = "0.3.5"

[profile.bench]
debug = true

[[bench]]
name = "parse"
harness = false
